# arithma

./: Cargo.toml  Makefile  README.md
src/: bridge.rs  composition.rs  evaluator.rs  exact.rs  expression.rs  frb_generated.rs  functions.rs  integer.rs  integration.rs  latex.rs  lib.rs  main.rs  node.rs  parser.rs  simplify.rs  substitute.rs  systems.rs  tokenizer.rs  wasm_bindings.rs
tests/: functions.rs  latex.rs
