[workspace]
members = [".", "crates/cli", "crates/mcp"]

[package]
name = "arithma"
version = "0.1.0"
edition = "2021"

[lib]
name = "arithma"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]

[dependencies]
flutter_rust_bridge = "=2.12.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
lazy_static = "1.5.0"
regex = "1.9.5"
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
