[package]
name = "arithma"
version = "0.1.0"
edition = "2021"
default-run = "arithma"

[lib]
name = "arithma"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

# Feature flags can be added here as needed
[features]

[dependencies]
flutter_rust_bridge = "=2.12.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.5.0"
regex = "1.9.5"
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"

[[bin]]
name = "arithma-mcp"
path = "src/bin/arithma-mcp.rs"
